REDO-844 make sure the icon doesnt wrap

--- a/source/css/scss/app/pages/loan.scss
+++ b/source/css/scss/app/pages/loan.scss
@@ -314,8 +314,8 @@
 
 	.lend-values-button {
 		.lend-action-button {
-			padding-right: 0.5rem;
-			padding-left: 0.5rem;
+			padding-right: 0.3rem;
+			padding-left: 0.3rem;
 			line-height: 1.5rem;
 			&:after {
 				right: 0.5rem;
